# stylized-neural-painting

./: .gitignore  LICENSE  README.md  WRITEUP.md  colab_demo.ipynb  paint.ipynb  pyproject.toml  train_nn_renderer.ipynb
painting/: brushes.py  imitator.py  networks.py  painter.py  samplers.py  style_transferer.py  video_export.py
painting/loss/: __init__.py  brush_stroke.py  image.py
painting/utils/: __init__.py  common.py  draw.py  rand.py
