[project]
name = "stylized-brush-stroke-painting"
version = "1.0.0"
description = "Stylized painting with gradient descent optimization of brush stroke parameters"
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "gradio>=6.6.0",
    "huggingface-hub>=1.3.4,<2.0.0",
    "jupyter>=1.1.1,<2.0",
    "kornia>=0.8.2,<1.0",
    "matplotlib>=3.10.8,<4.0",
    "numpy>=2.4.1,<3.0",
    "opencv-python>=4.13.0.90,<5.0",
    "pillow>=12.1.0,<13.0",
    "plotly>=6.5.2,<7.0",
    "requests>=2.32.5,<3.0",
    "tensorboard>=2.20.0,<3.0",
    "torch>=2.9.1,<3.0",
    "torchvision>=0.24.1,<1.0",
    "tqdm>=4.67.0,<5.0",
]
